# recon

./: .gitignore  .pre-commit-config.yaml  .replit  111.pcap  12.txt  ACTION_CHECKLIST.md  ALL_FIXES_SUMMARY.md  ALL_SYNTAX_ERRORS_FIXED.md  ARCHITECTURE.md  ATTACK_ORCHESTRATOR_QUICK_START.md  ATTACK_TEST_ORCHESTRATOR_README.md  ATTACK_VALIDATION_PRODUCTION_STATUS.md  ATTACK_VALIDATION_SUITE_COMPLETE.md  ATTACK_VALIDATION_USER_GUIDE.md  BASELINE_SYSTEM_QUICK_START.md  BASELINE_SYSTEM_VERIFICATION.md  BYPASS_ENGINE_INTEGRATION_COMPLETE.md  CHECKSUM_VALIDATION_SUMMARY.md  CIRCULAR_IMPORT_FIXED.md  CLEANUP_TARGETS_SUMMARY.md  CLI_BASELINE_COMPARISON_QUICK_START.md  CLI_VALIDATION_OUTPUT_QUICK_START.md  CLI_VALIDATION_QUICK_START.md  COMPREHENSIVE_FIXES_SUMMARY.md  COMPREHENSIVE_FIX_IMPLEMENTATION.py  CRITICAL_DISCOVERY.md  CRITICAL_FIXES_NEEDED.md  CRITICAL_ISSUES_ANALYSIS.md  CRITICAL_TTL_FIX_REPORT.md  CURRENT_STATUS.md  DEEP_DIAGNOSIS_REPORT.json  DIAGNOSIS_REPORT.md  DPI_FINGERPRINTING_QUICK_START.md  ENGINE_UNIFICATION_CRITICAL_DISCOVERY.md  ENGINE_UNIFICATION_SUCCESS_REPORT.md  EXPERIMENTAL_ATTACKS_IMPLEMENTATION_PLAN.md  FAKEDDISORDER_IMPLEMENTATION_ANALYSIS.json  FAKEDDISORDER_UNIFICATION_FIX.md  FALLBACK_BLOCK_REPORT.md  FINAL_FIX_INSTRUCTIONS.txt  (+1234 more)
async_utils/: import_manager.py
attack_validation/: attack_validation_results_1756317026.json
backups/: strategies.json.backup_20250829_123537  strategies.json.backup_20250829_123613  strategies.json.backup_20250829_125119
baselines/: baseline_v1.json  my_baseline_v1.json  tcp_tls_baseline.json  x_com_with_fingerprint.json
bypass/: exceptions.py  system_bypass_manager.py
bypass_configs/: clash.yaml  shadowsocks_client.json  v2ray_client.json
config/: README.md  combination_attacks.json  doh_config.json  domain_filter.json  dpi_strategy_config.json  engine_config.json  engine_config.json.backup  engine_config_development.json  engine_config_production.json  enhanced_strategies_v3.json  feature_flags.json  performance_regression_fix.json  strategy_legacy_defaults.json
core/: INTEGRATION_IMPLEMENTATION_SUMMARY.md  PACKET_VALIDATOR_README.md  SIMPLE_PACKET_VALIDATOR_README.md  __init__.py  adaptive_engine.py  adaptive_knowledge.py  adaptive_state_manager.py  adaptive_strategy_adjuster.py  app_level_tester.py  attack_combinator.py  attack_execution_engine.py  attack_execution_engine.py.backup_20251007_120748  attack_mapping.py  attack_parameter_mapper.py  attack_spec_loader.py  auto_discovery_domain_integration.py  baseline_manager.py  blocked_domain_detector.py  bypass_engine.py  bypass_engine.py.bak_phase1  capture.py  cdn_resolver.py  cli_service_parity_disabler.py  cli_validation_integration.py  cli_validation_orchestrator.py  cli_workflow_optimizer.py  compat.py  connection_metrics.py  demo_modern_integration.py  demo_modern_integration.py.backup_20251007_120748  diagnostic_system.py  diagnostic_system.py.syntax_backup_20251007_121634  diagnostic_system_main.py  discovery_combination_integration.py  discovery_config.py  discovery_controller.py  discovery_debugging.py  discovery_logging.py  doh_resolver.py  domain_filter.py  (+84 more)
data/: adaptive_knowledge.backup_1764743696  adaptive_knowledge.json  adaptive_knowledge.json.backup  attack_registry.json  phase2_learning_memory.db  probe_cache.json
demo_baselines/: demo_baseline.json
deployment/: full_deployment.py  production_deployment_manager.py  service_mode_deployment.py
di/: __init__.py  factory.py
diagnostics/: logger.py  metrics.py
dns/: __init__.py  ip_aggregator.py  robust_dns_handler.py
docs/: ADDING_NEW_ATTACKS.md  ADVANCED_DPI_FINGERPRINTING_COMPLETION_REPORT.md  ADVANCED_FINGERPRINTER_IMPLEMENTATION_SUMMARY.md  ANALYSIS_AND_FIXES_SUMMARY.md  (+180 more)
(+5259 files in other folders)
