[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellirefactor"
version = "0.1.0"
description = "Intelligent Project Analysis and Refactoring System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "IntelliRefactor Team", email = "contact@intellirefactor.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "ast-tools>=0.1.0",
    "astunparse>=1.6.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "networkx>=2.8.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.1.0",
    "toml>=0.10.0",
    "astroid>=2.12.0",
    "pylint>=2.15.0",
    "radon>=5.1.0",
    "rope>=1.3.0",
    "joblib>=1.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "colorama>=0.4.0",
    "tqdm>=4.64.0",
    "pathspec>=0.10.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
intellirefactor = "intellirefactor.cli:main"

[project.urls]
Homepage = "https://github.com/intellirefactor/intellirefactor"
Documentation = "https://intellirefactor.readthedocs.io/"
Repository = "https://github.com/intellirefactor/intellirefactor"
"Bug Tracker" = "https://github.com/intellirefactor/intellirefactor/issues"

[tool.setuptools.packages.find]
include = ["intellirefactor*"]

[tool.setuptools.package-data]
intellirefactor = [
    "knowledge/*.json",
    "knowledge/*.md", 
    "templates/*.json",
    "templates/*.yaml",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
]

[tool.coverage.run]
source = ["intellirefactor"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]